# shopping-react-flask

./: README.md
backend/: .env.example  .gitignore  CHANGED.md  CHANGELOG.md  CODE_REVIEW.md  README.md  asgi.py  pyproject.toml  wsgi.py
backend/app/: __init__.py  config.py  database.py  database_migration.py  dependencies.py  init_admin.py  main.py  reset_admin.py
backend/app/api/: about_us.py  ads.py  auth.py  cart.py  categories.py  ecpay.py  faq.py  home.py  news.py  orders.py  products.py
backend/app/api/admin/: __init__.py  about.py  ads.py  categories.py  faq.py  login.py  logout.py  me.py  news.py  orders.py  product_images.py  products.py  upload.py  users.py
backend/app/core/: security.py  session.py
backend/app/models/: __init__.py  about_us.py  ad.py  cart.py  cart_item.py  faq.py  news.py  order.py  order_item.py  product.py  product_category.py  product_image.py  user.py
backend/app/schemas/: __init__.py  about_us.py  ad.py  admin.py  cart.py  category.py  faq.py  news.py  order.py  product.py  user.py
backend/app/static/: admin.html  ads.html  base.html  login.html  users-refactored.html  users.html
backend/app/static/admin/about/: add-edit.html  index.html
backend/app/static/admin/ads/: add-edit.html  index.html
backend/app/static/admin/categories/: add-edit.html  index.html
backend/app/static/admin/faq/: add-edit.html  index.html
backend/app/static/admin/news/: add-edit.html  index.html
backend/app/static/admin/orders/: index.html
backend/app/static/css/: admin-common.css
backend/app/static/js/: admin-common.js  admin-pagination.js  admin-simplemde.js  admin-table.js  admin-upload.js
(+67 files in other folders)
