[project]
name = "shopping-backend"
version = "0.1.0"
description = "Shopping cart system backend with FastAPI"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "itsdangerous>=2.1.0",
    "pillow>=10.0.0",
    "asgiref>=3.7.0",  # ASGI/WSGI 适配器，用于 uWSGI
    "gunicorn>=21.2.0",  # WSGI/ASGI 服务器，推荐用于生产环境（解决 _contextvars 错误）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

